--- a/masbro/index.html
+++ b/masbro/index.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../masbro/style.css">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -22,23 +22,23 @@
   <section id="mainGame">
     <div class="gameLayer">
       <div class="title-section">
-        <h1 class="text-center title"><img src="../images/title.png" alt=""></h1>
-        <div class="text-center"><img class="text-center button-start heartbeat" src="../images/start.png" alt=""></div>
+        <h1 class="text-center title"><img src="../masbro/images/title.png" alt=""></h1>
+        <div class="text-center"><img class="text-center button-start heartbeat" src="../masbro/images/start.png" alt=""></div>
       </div>
 
       <div class="gameObject">
         <h2 class="score none">Score : <span class="value">0</span></h2>
-        <img src="../images/jump.png" class="jumpBtn none" alt="">
+        <img src="../masbro/images/jump.png" class="jumpBtn none" alt="">
         <div class="ground"><img src="" alt=""></div>
-        <div class="capyBara"><img src="../images/capy.png" alt="" width="80" height="60"></div>
+        <div class="capyBara"><img src="../masbro/images/capy.png" alt="" width="80" height="60"></div>
         <div class="obstacles"></div>
       </div>
       
       <div class="gameOver none">
         <div class="window">
-          <h2 class="text-center overImg"><img src="../images/over.png" alt=""></h2>
-          <h2 class="overImg scoreEnd"><img src="../images/score.png" alt=""><p class="end-value"></p></h2>
-          <div class="text-center"><img class="button-reset heartbeat" src="../images/reset.png" alt=""></div>
+          <h2 class="text-center overImg"><img src="../masbro/images/over.png" alt=""></h2>
+          <h2 class="overImg scoreEnd"><img src="../masbro/images/score.png" alt=""><p class="end-value"></p></h2>
+          <div class="text-center"><img class="button-reset heartbeat" src="../masbro/images/reset.png" alt=""></div>
         </div>
       </div>
     </div>
@@ -50,7 +50,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
   </script>
-  <script src="../js/script.js"></script>
+  <script src="../masbro/js/script.js"></script>
 </body>
 
 </html>
