--- a/layartancap/index.html
+++ b/layartancap/index.html
@@ -74,7 +74,7 @@
         <div class="bottom"></div>
         <div id="videoCarousel" class="carouselContainer">
           <div class="carouselItem">
-            <video src="./video/video.mp4" autoplay muted loop></video>
+            <video src="./video/video.mp4" autoplay muted loop playsinline></video>
             <div class="content">
               <section class="left">
                 <img class="movie-logo" src="./images/image2.webp" alt="">
@@ -89,7 +89,7 @@
             </div>
           </div>
           <div class="carouselItem">
-            <video src="./video/video2.mp4" autoplay muted loop></video>
+            <video src="./video/video2.mp4" autoplay muted loop playsinline></video>
             <div class="content">
               <section class="left">
                 <img class="movie-logo" src="./images/logo2.png" alt="">
@@ -104,7 +104,7 @@
             </div>
           </div>
           <div class="carouselItem">
-            <video src="./video/video3.mp4" autoplay muted loop></video>
+            <video src="./video/video3.mp4" autoplay muted loop playsinline></video>
             <div class="content">
               <section class="left">
                 <img class="movie-logo" src="./images/logo3.png" alt="">
