--- a/layartancap/index.html
+++ b/layartancap/index.html
@@ -142,7 +142,7 @@
             <h2 class="headTitle">ACTION</h2>
             <div class="row cardListContent move-slide"></div>
           </div>
-          <div id="horror">
+          <div id="animation">
             <h2 class="headTitle">ANIMATION</h2>
             <div class="row cardListContent move-slide"></div>
           </div>
