--- a/layartancap/index.html
+++ b/layartancap/index.html
@@ -57,11 +57,10 @@
           </div>
           <div class="right d-flex align-items-center">
             <div class="search">
-              <input class="input form-input-search"  type="text" placeholder="Titles, people, genres">
+              <input class="input form-input-search"  type="text" placeholder="Search by Movie name">
               <i class="bi bi-search img"></i>
               <i class="bi bi-x-circle img hide"></i>
             </div>
-            <i class="bi bi-bell-fill"></i>
             <section class="netflix-profile">
 
             </section>
