--- a/layartancap/index.html
+++ b/layartancap/index.html
@@ -51,7 +51,7 @@
                 <li><a class="dropdown-item" href="#">TV Shows</a></li>
                 <li><a class="dropdown-item" href="#">Movies</a></li>
                 <li><a class="dropdown-item" href="#">News & Popular</a></li>
-                <li><a class="dropdown-item" href="#">My List</a></li>
+                <li><a class="dropdown-item" href="list.html">My List</a></li>
               </ul>
             </div>
           </div>
