--- a/layartancap/list.html
+++ b/layartancap/list.html
@@ -67,6 +67,7 @@
     <section id="bodyContent">
           <section id="cardContainer">
             <div class="searchContainer fade-in container">
+              <button type="button" class="btn btn-danger btn-clear">clear</button>
               <div id="myList">
                 <h2 class="headTitle">My List</h2>
                 <div class="row cardListContent move-slide"></div>
