--- a/layartancap/list.html
+++ b/layartancap/list.html
@@ -34,11 +34,11 @@
             </a>
             <div class="netflix-nav">
               <section>
-                <button>Home</button>
+                <button><a href="index.html">Home</a></button>
                 <button>TV Shows</button>
                 <button>Movies</button>
                 <button>News & Popular</button>
-                <button><a href="">My List</a></button>
+                <button><a href="list.html">My List</a></button>
               </section>
             </div>
             <div class="netflix-dropdown-box dropdown">
@@ -47,15 +47,20 @@
                 Browse
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item" href="#">Home</a></li>
+                <li><a class="dropdown-item" href="index.html">Home</a></li>
                 <li><a class="dropdown-item" href="#">TV Shows</a></li>
                 <li><a class="dropdown-item" href="#">Movies</a></li>
                 <li><a class="dropdown-item" href="#">News & Popular</a></li>
-                <li><a class="dropdown-item" href="#">My List</a></li>
+                <li><a class="dropdown-item" href="list.html">My List</a></li>
               </ul>
             </div>
           </div>
           <div class="right d-flex align-items-center">
+            <div class="search">
+              <input class="input form-input-search"  type="text" placeholder="Search by Movie name">
+              <i class="bi bi-search img"></i>
+              <i class="bi bi-x-circle img hide"></i>
+            </div>
             <section class="netflix-profile">
 
             </section>
@@ -67,9 +72,10 @@
     <section id="bodyContent">
           <section id="cardContainer">
             <div class="searchContainer fade-in container">
-              <button type="button" class="btn btn-danger btn-clear">clear</button>
+              
               <div id="myList">
                 <h2 class="headTitle">My List</h2>
+                <button type="button" class="btn btn-danger btn-clear">CLEAR</button>
                 <div class="row cardListContent move-slide"></div>
               </div>
             </div>
