--- a/layartancap/index.html
+++ b/layartancap/index.html
@@ -229,17 +229,11 @@
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
-            <div class="modal-header text-center">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
             <div class="modal-body omb_socialButtons">
               <form>
                 <div class="form-group">
-                  <div class="modal-caption text-center" style="font-family: 'Anton', sans-serif;">
-                    ONE STOP LOGIN<br>
-                    FOR EVERYTHING
+                  <div class="modal-caption modal-title">
+                   Sign in
                   </div>
                   <span><input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                       placeholder="Enter email"></span>
@@ -249,26 +243,22 @@
                 </div>
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                  <label class="form-check-label label-caption" for="defaultCheck1">
+                  <label class="form-check-label" for="defaultCheck1">
                     Keep me logged in
-                    <a href="#">
-                      <p class=" label-caption " style="float:right;">Forget your password?</p>
-                    </a>
                   </label>
-                  <p class="  form-check-label label-caption text-center mt1rem ">By logging in, you agree
-                    to our Privacy
-                    Policy and Terms of Use</p>
                 </div>
                 <div class="  omb_socialButtons  mt2rem">
-                  <a href="#" class="btn btn-lg btn-block omb_btn-facebook">
-                    <span class="hidden-xs" style="font-family: 'Anton', sans-serif;">LOG IN</span>
-                  </a>
-                  <a href="#" class="btn btn-lg btn-block omb_btn-google">
-                    <i class="fab fa-google-plus-g">&nbsp;</i>
-                    <span class="hidden-xs" style="font-family: 'Anton', sans-serif;">LOG IN WITH
-                      GOOGLE</span>
+                  <a href="#" class="btn btn-lg btn-block btn-login omb_btn-facebook">
+                    <span class="hidden-xs" style="font-family: 'Anton', sans-serif;">Sign in</span>
                   </a>
                 </div>
+                <div>
+                  <a href="#" class="btn btn-lg btn-block btn-google omb_btn-google">
+                    <i class="fab fa-google-plus-g">&nbsp;</i>
+                    <span class="hidden-xs" style="font-family: 'Anton', sans-serif;">Log in with Google</span>
+                  </a>
+                </div>
+                <p class="form-check-label label-caption text-center mt1rem">Haven't got Account yet? Please <span class="red"><a href="#">Sign Up</a></span></p>
               </form>
             </div>
           </div>
