--- a/layartancap/list.html
+++ b/layartancap/list.html
@@ -56,13 +56,8 @@
             </div>
           </div>
           <div class="right d-flex align-items-center">
-            <div class="search">
-              <input class="input form-input-search"  type="text" placeholder="Search by Movie name">
-              <i class="bi bi-search img"></i>
-              <i class="bi bi-x-circle img hide"></i>
-            </div>
             <section class="netflix-profile">
-
+              <a href="#" data-bs-toggle="modal" data-bs-target="#loginModal"><i class="fa fa-user"></i></a>
             </section>
           </div>
         </div>
@@ -75,7 +70,7 @@
               
               <div id="myList">
                 <h2 class="headTitle">My List</h2>
-                <button type="button" class="btn btn-danger btn-clear">CLEAR</button>
+                <button type="button" class="btn btn-clear">CLEAR</button>
                 <div class="row cardListContent move-slide"></div>
               </div>
             </div>
@@ -89,6 +84,50 @@
         </div>
       </div>
     </div>  
+    
+    <!-- MODAL LOGIN -->
+    <section>
+      <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-body omb_socialButtons">
+              <form>
+                <div class="form-group">
+                  <div class="modal-caption modal-title">
+                   Sign in
+                  </div>
+                  <span><input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                      placeholder="Enter email"></span>
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                  <label class="form-check-label" for="defaultCheck1">
+                    Keep me logged in
+                  </label>
+                </div>
+                <div class="  omb_socialButtons  mt2rem">
+                  <a href="#" class="btn btn-lg btn-block btn-login omb_btn-facebook">
+                    <span class="hidden-xs" style="font-family: 'Anton', sans-serif;">Sign in</span>
+                  </a>
+                </div>
+                <div>
+                  <a href="#" class="btn btn-lg btn-block btn-google omb_btn-google">
+                    <i class="fab fa-google-plus-g">&nbsp;</i>
+                    <span class="hidden-xs" style="font-family: 'Anton', sans-serif;">Log in with Google</span>
+                  </a>
+                </div>
+                <p class="form-check-label label-caption text-center mt1rem">Haven't got Account yet? Please <span class="red"><a href="#">Sign Up</a></span></p>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- END MODAL -->
+    </section>
 
     <!-- footer  -->
     <div class="container footer">
