--- a/layartancap/index.html
+++ b/layartancap/index.html
@@ -17,7 +17,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fjalla+One&family=Source+Sans+Pro:wght@400;600&display=swap"
     rel="stylesheet">
-  <title>NETFLIX CLONE</title>
+  <title>LAYAR TANCAP</title>
   <script src="https://kit.fontawesome.com/0a0fc88f6f.js" crossorigin="anonymous"></script>
 </head>
 
