--- a/imsakiyah/index.html
+++ b/imsakiyah/index.html
@@ -18,8 +18,7 @@
         <div class="container">
             <h1>Jadwal Imsakiyah</h1>
             <div class="runningText">
-                <p id="scroll-text"> يَا أَيُّهَا الَّذِينَ آمَنُوا كُتِبَ عَلَيْكُمُ الصِّيَامُ كَمَا كُتِبَ عَلَى الَّذِينَ مِنْ قَبْلِكُمْ لَعَلَّكُمْ تَتَّقُونَ.
-                    “Wahai orang-orang beriman, diwajibkan atas kamu berpuasa sebagaimana diwajibkan atas orang-orang sebelum kamu. (Berpuasa) agar kamu bertakwa.” (Q.S Al Baqarah ayat 183)</p>
+                <p id="scroll-text">“Wahai orang-orang beriman, diwajibkan atas kamu berpuasa sebagaimana diwajibkan atas orang-orang sebelum kamu. (Berpuasa) agar kamu bertakwa.” (Q.S Al Baqarah ayat 183)</p>
             </div>
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
