--- a/imsakiyah/index.html
+++ b/imsakiyah/index.html
@@ -16,9 +16,9 @@
 <body>
     <section id="outerContainer">
         <div class="container">
-            <h1>Jadwal Imsakiyah</h1>
+            <h1>Jadwal Sholat</h1>
             <div class="runningText">
-                <p id="scroll-text">“Wahai orang-orang beriman, diwajibkan atas kamu berpuasa sebagaimana diwajibkan atas orang-orang sebelum kamu. (Berpuasa) agar kamu bertakwa.” (Q.S Al Baqarah ayat 183)</p>
+                <p id="scroll-text">“Bacalah Kitab (Al-Qur'an) yang telah diwahyukan kepadamu (Muhammad) dan laksanakanlah salat. Sesungguhnya salat itu mencegah dari (perbuatan) keji dan mungkar.” (Q.S Al Ankabut ayat 45)</p>
             </div>
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
@@ -63,7 +63,7 @@
                                 <option selected disabled>Filter Tanggal Data</option>
                                 <option value="1">hari ini saja</option>
                                 <option value="7">7 hari dari hari ini</option>
-                                <option value="30">1 bulan Ramadhan</option>
+                                <option value="30">1 bulan</option>
                             </select>
                         </div>
                     </div>
