--- a/imsakiyah/index.html
+++ b/imsakiyah/index.html
@@ -42,7 +42,7 @@
                                         <option selected disabled>Filter Tanggal Data</option>
                                         <option value="1">hari ini saja</option>
                                         <option value="7">7 hari dari hari ini</option>
-                                        <option value="30">1 bulan Ramadhan</option>
+                                        <option value="30">1 bulan</option>
                                     </select>
                                 </div>
                                 <button type="button" class="btn btn-success btn-search">Cari</button>
