--- a/insinhoputrapratama/about.html
+++ b/insinhoputrapratama/about.html
@@ -543,61 +543,11 @@
       </nav>
     </header>
     <!-- /header -->
-    <section class="wrapper bg-dark">
-      <div class="swiper-container swiper-hero dots-over" data-margin="0" data-autoplay="true" data-autoplaytime="7000" data-nav="true" data-dots="true" data-items="1">
-        <div class="swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide bg-overlay bg-overlay-400 bg-dark bg-image" data-image-src="./assets/img/photos/mv1.webp">
-              <div class="container h-100">
-                <div class="row h-100">
-                  <div class="col-md-10 offset-md-1 col-lg-7 offset-lg-0 col-xl-6 col-xxl-5 text-center text-lg-start justify-content-center align-self-center align-items-start">
-                    <h2 class="display-1 fs-56 mb-4 text-white animate__animated animate__slideInDown animate__delay-1s">PT Insinho Putra Pratama</h2>
-                    <p class="lead fs-23 lh-sm mb-7 text-white animate__animated animate__slideInRight animate__delay-2s">Your best solution for every logistic and shipment needs.</p>
-                    <div class="animate__animated animate__slideInUp animate__delay-3s"><a href="#" class="btn btn-lg btn-outline-white rounded-pill">Read More</a></div>
-                  </div>
-                  <!--/column -->
-                </div>
-                <!--/.row -->
-              </div>
-              <!--/.container -->
-            </div>
-            <!--/.swiper-slide -->
-            <div class="swiper-slide bg-overlay bg-overlay-400 bg-dark bg-image" data-image-src="./assets/img/photos/mv2.webp">
-              <div class="container h-100">
-                <div class="row h-100">
-                  <div class="col-md-11 col-lg-8 col-xl-7 col-xxl-6 mx-auto text-center justify-content-center align-self-center">
-                    <h2 class="display-1 fs-56 mb-4 text-white animate__animated animate__slideInDown animate__delay-1s">We are trusted by over a million customers.</h2>
-                    <p class="lead fs-23 lh-sm mb-7 text-white animate__animated animate__slideInRight animate__delay-2s">Here a few reasons why our customers choose us.</p>
-                  </div>
-                  <!--/column -->
-                </div>
-                <!--/.row -->
-              </div>
-              <!--/.container -->
-            </div>
-            <!--/.swiper-slide -->
-            <div class="swiper-slide bg-overlay bg-overlay-400 bg-dark bg-image" data-image-src="./assets/img/photos/mv3.webp">
-              <div class="container h-100">
-                <div class="row h-100">
-                  <div class="col-md-10 offset-md-1 col-lg-7 offset-lg-5 col-xl-6 offset-xl-6 col-xxl-5 offset-xxl-6 text-center text-lg-start justify-content-center align-self-center align-items-start">
-                    <h2 class="display-1 fs-56 mb-4 text-white animate__animated animate__slideInDown animate__delay-1s">Just sit and relax.</h2>
-                    <p class="lead fs-23 lh-sm mb-7 text-white animate__animated animate__slideInRight animate__delay-2s">We make sure your spending is stress free so that you can have the perfect control.</p>
-                    <div class="animate__animated animate__slideInUp animate__delay-3s"><a href="#" class="btn btn-lg btn-outline-white rounded-pill">Contact Us</a></div>
-                  </div>
-                  <!--/column -->
-                </div>
-                <!--/.row -->
-              </div>
-              <!--/.container -->
-            </div>
-            <!--/.swiper-slide -->
-          </div>
-          <!--/.swiper-wrapper -->
-        </div>
-        <!-- /.swiper -->
-      </div>
-      <!-- /.swiper-container -->
+    <section class="wrapper bg-gray h-vh-100">
+      <!-- /.container -->
+      <figure class="position-absoute" style="bottom: 0; left: 0; z-index: 2;"><img src="./assets/img/photos/mv1.webp" alt="" /></figure>
     </section>
+    <!-- /section -->
     <section class="wrapper bg-light angled lower-end">
       <div class="container py-14 py-md-16">
         <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-17 align-items-center">
@@ -703,9 +653,6 @@
       </div>
       <!-- /.container -->
     </section>
-    <!-- /section -->
-    <!-- /section -->
-    <!-- /section -->
     <section class="wrapper bg-light">
       <div class="container py-14 py-md-16">
         <div class="row gx-lg-8 gx-xl-12 gy-10 gy-lg-0">
@@ -759,6 +706,90 @@
       </div>
       <!-- /.container -->
     </section>
+    <section class="wrapper bg-light">
+      <div class="container py-14 py-md-16 text-center">
+        <div class="row">
+          <div class="col-lg-10 col-xl-8 col-xxl-7 mx-auto mb-8">
+            <h2 class="display-5 mb-3">Our Recent Projects</h2>
+            <p class="lead fs-lg">Hereby the latest documentation of our several projects.</p>
+          </div>
+          <!-- /column -->
+        </div>
+        <!-- /.row -->
+        <div class="grid grid-view projects-masonry">
+          <div class="isotope-filter filter mb-10">
+            <ul>
+              <li><a class="filter-item active" data-filter="*">All</a></li>
+              <li><a class="filter-item" data-filter=".shipment">Shipments</a></li>
+              <li><a class="filter-item" data-filter=".logistic">Logistics</a></li>
+            </ul>
+          </div>
+          <div class="row gx-md-6 gy-6 isotope">
+            <div class="project item col-md-6 col-xl-4 shipment">
+              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo1.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo1.webp" alt="" /></a>
+                <figcaption>
+                  <h5 class="from-top mb-0">Fringilla Nullam</h5>
+                </figcaption>
+              </figure>
+            </div>
+            <!-- /.project -->
+            <div class="project item col-md-6 col-xl-4 logistic">
+              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo2.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo2.webp" alt="" /></a>
+                <figcaption>
+                  <h5 class="from-top mb-0">Ridiculus Parturient</h5>
+                </figcaption>
+              </figure>
+            </div>
+            <!-- /.project -->
+            <div class="project item col-md-6 col-xl-4 logistic">
+              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo3.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo3.webp" alt="" /></a>
+                <figcaption>
+                  <h5 class="from-top mb-0">Ornare Ipsum</h5>
+                </figcaption>
+              </figure>
+            </div>
+            <!-- /.project -->
+            <div class="project item col-md-6 col-xl-4 logistic">
+              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo4.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo4.webp" alt="" /></a>
+                <figcaption>
+                  <h5 class="from-top mb-0">Nullam Mollis</h5>
+                </figcaption>
+              </figure>
+            </div>
+            <!-- /.project -->
+            <div class="project item col-md-6 col-xl-4 logistic">
+              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo5.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo5.webp" alt="" /></a>
+                <figcaption>
+                  <h5 class="from-top mb-0">Euismod Risus</h5>
+                </figcaption>
+              </figure>
+            </div>
+            <!-- /.project -->
+            <div class="project item col-md-6 col-xl-4 logistic">
+              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo6.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo6.webp" alt="" /></a>
+                <figcaption>
+                  <h5 class="from-top mb-0">Ridiculus Tristique</h5>
+                </figcaption>
+              </figure>
+            </div>
+            <!-- /.project -->
+            <div class="project item col-md-6 col-xl-4 logistic">
+              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo7.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo7.webp" alt="" /></a>
+                <figcaption>
+                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
+                </figcaption>
+              </figure>
+            </div>
+            <!-- /.project -->
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- /.grid -->
+        <a href="/projects.html" class="btn btn-primary rounded-pill mb-0 mt-5">Show all Projects</a>
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /section -->
   </div>
   <!-- /.content-wrapper -->
   <footer class="bg-dark text-inverse">
@@ -769,9 +800,9 @@
           <div class="widget">
             <h4 class="widget-title mb-3 text-white">Learn More</h4>
             <ul class="list-unstyled mb-0">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Our Story</a></li>
-              <li><a href="#">Projects</a></li>
+              <li><a href="./about.html">About Us</a></li>
+              <li><a href="#">Clients</a></li>
+              <li><a href="./projects.html">Projects</a></li>
             </ul>
           </div>
           <!-- /.widget -->
